@@ -41,7 +41,7 @@ const char *camel_iconv_charset_language (const char *charset);
 
 iconv_t camel_iconv_open (const char *to, const char *from);
 size_t camel_iconv (iconv_t cd, const char **inbuf, size_t *inleft, char **outbuf, size_t *outleft);
-int camel_iconv_close (iconv_t cd);
+void camel_iconv_close (iconv_t cd);
 
 #ifdef __cplusplus
 }
